# MyApp

MyApp/: AndroidManifest.xml  CMakeLists.txt  CMakeSettings.json  build.gradle
MyApp/res/values/: strings.xml
MyApp/src/: main.cpp
